tests/ui/macros/meta-item-absolute-path.stderr
error[E0433]: failed to resolve: maybe a missing crate `Absolute`?
  --> $DIR/meta-item-absolute-path.rs:1:12
   |
LL | #[derive(::Absolute)]
   |            ^^^^^^^^ maybe a missing crate `Absolute`?

error[E0433]: failed to resolve: maybe a missing crate `Absolute`?
  --> $DIR/meta-item-absolute-path.rs:1:12
   |
LL | #[derive(::Absolute)]
   |            ^^^^^^^^ maybe a missing crate `Absolute`?

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
