tests/ui/macros/meta-item-absolute-path.rs
#[derive(::Absolute)] //~ ERROR failed to resolve
                      //~| ERROR failed to resolve
struct S;

fn main() {}
